@@ -27,7 +27,7 @@ public final class FilterBuildItem extends MultiBuildItem {
         this.filterClass = builder.filterClass;
         this.loadOnStartup = builder.loadOnStartup;
         this.asyncSupported = builder.asyncSupported;
-        this.mappings = Collections.unmodifiableList(new ArrayList<>(builder.mappings));
+        this.mappings = List.copyOf(builder.mappings);
         this.instanceFactory = builder.instanceFactory;
         this.initParams = Collections.unmodifiableMap(new HashMap<>(builder.initParams));
     }
